# fsonl-py

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_inline_schema.py  02_code_schema.py  03_define_schema.py  04_serialize.py  05_stream_file.py  06_raw_mode.py
src/fsonl/: __init__.py  __main__.py  _api.py  _binder.py  _define.py  _errors.py  _parser.py  _scanner.py  _schema.py  _schema_parser.py  _serializer.py  _types.py  _values.py  _writer.py
tests/: conftest.py  test_api.py  test_bind.py  test_cross_validation.py  test_define.py  test_missing_coverage.py  test_serializer.py  test_serializer_raw.py  test_serializer_strict.py
tests/common/: test_bind.py  test_bind_line.py  test_cross_validation.py  test_dumps.py  test_dumps_extra.py  test_dumps_field_collision.py  test_dumps_raw.py  test_dumps_roundtrip.py  test_dumps_schema_format.py  test_dumps_unknown_type.py  test_dumps_value_edge.py  test_dumps_variadic.py  test_errors.py  test_loads.py  test_schema.py  test_schema_errors.py  test_writer.py
tests/python/: test_define.py  test_dump_file.py  test_iter.py  test_load_file.py  test_parse_result.py  test_pr1_fixes.py  test_schema_io.py  test_to_dict.py  test_writer.py
